--- a/server/docker-compose-dev.yaml
+++ b/server/docker-compose-dev.yaml
@@ -26,6 +26,15 @@ services:
       - "9200:9200"
     volumes:
       - ./es_data:/usr/share/elasticsearch/data
+    # 데이터 적재시 연결 보장하기 위한 healthcheck
+    # data-loader가 depneds_on을 사용하고 있지만, ES 컨테이너가 시작되는 것만 확인하지 서비스 완전히 준비된 것을 보장하지 않음
+    # 결국 ES 컨테이너가 "green" 상태가 될 때까지 대기하도록 설정 진행
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cat/health | grep -q green"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: on-failure
 
   redis:
     image: redis:6.2
@@ -36,3 +45,36 @@ services:
       - REDIS_PASSWORD=gaebaljip-local
     volumes:
       - ./redis_data:/data
+
+
+  # fastapi_app:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.api
+  #   depends_on:
+  #     - mariadb
+  #     - elasticsearch
+  #   ports:
+  #     - "8000:8000"
+  #   environment:
+  #     - ELASTICSEARCH_HOST=local-elasticsearch:9200
+  #     - MARIADB_HOST=local-mariadb
+  #     - MARIADB_USER=gaebaljip-local
+  #     - MARIADB_PASSWORD=gaebaljip-local
+  #     - MARIADB_DB=gaebaljip
+
+  data_loader:
+    build:
+      context: .
+      dockerfile: Dockerfile.data
+    volumes:
+      - ./data:/app/data
+    # 개발환경 : .env.dev
+    env_file:
+      - .env.dev
+    depends_on:
+      elasticsearch:
+        condition: service_healthy
+    environment:
+      - APP_ENV=dev
+    restart: on-failure
