feat: Redis를 이용한 API 요청 횟수 제한 구현

--- a/server/docker-compose-dev.yaml
+++ b/server/docker-compose-dev.yaml
@@ -43,6 +43,7 @@ services:
       - "6379:6379"
     environment:
       - REDIS_PASSWORD=gaebaljip-local
+    command: ["redis-server", "--requirepass", "gaebaljip-local"]
     volumes:
       - ./redis_data:/data
 
