--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -33,6 +33,12 @@ services:
       - ./es_data:/usr/share/elasticsearch/data
     ports:
       - "9200:9200"
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cat/health | grep -q green"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: on-failure
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.9
@@ -45,22 +51,17 @@ services:
     depends_on:
       - elasticsearch
 
-  fastapi:
+  eatceed:
     image: kyeong6/eatceed:latest
     ports:
       - "8000:8000"
     env_file:
       - .env.prod
-    depends_on:
-      - mariadb
-      - redis
-      - elasticsearch
-
-  data-loader:
-    image: kyeong6/data-loader:latest
     volumes:
       - ./data:/app/data
-    env_file:
-      - .env.prod
     depends_on:
-      - elasticsearch
+      elasticsearch:
+        condition: service_healthy
+      redis:
+        condition: service_started
+    restart: on-failure
