--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -1,10 +1,8 @@
-version: '3'
-
 services:
   mariadb:
     image: mariadb:10.6
     env_file:
-      - .env.prod
+      - /home/ubuntu/EATceed-AI/server/.env.prod
     environment:
       - MARIADB_ROOT_PASSWORD=${RDS_DATABASE_PASSWORD}
       - MYSQL_DATABASE=${RDS_DB_NAME}
@@ -16,7 +14,7 @@ services:
   redis:
     image: redis:6.2
     env_file:
-      - .env.prod
+      - /home/ubuntu/EATceed-AI/server/.env.prod
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
@@ -26,7 +24,7 @@ services:
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
     env_file:
-      - .env.prod
+      - /home/ubuntu/EATceed-AI/server/.env.prod
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
@@ -46,7 +44,7 @@ services:
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.9
     env_file:
-      - .env.prod
+      - /home/ubuntu/EATceed-AI/server/.env.prod
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_USERNAME}
@@ -58,10 +56,11 @@ services:
 
   eatceed:
     image: kyeong6/eatceed:latest
+    platform: linux/amd64
     ports:
       - "8000:8000"
     env_file:
-      - .env.prod
+      - /home/ubuntu/EATceed-AI/server/.env.prod
     volumes:
       - ./data:/app/data
     depends_on:
