--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -2,6 +2,8 @@ services:
 
   mariadb:
     image: mariadb:10.6
+    env_file:
+      - .env
     environment:
       - MARIADB_ROOT_PASSWORD=${RDS_DATABASE_PASSWORD}
       - MYSQL_DATABASE=${RDS_DB_NAME}
@@ -12,6 +14,8 @@ services:
 
   redis:
     image: redis:6.2
+    env_file:
+      - .env
     environment:
       - REDIS_PASSWORD=${REDIS_PASSWORD}
     command: ["redis-server", "--requirepass", "${REDIS_PASSWORD}"]
@@ -20,6 +24,8 @@ services:
 
   elasticsearch:
     image: docker.elastic.co/elasticsearch/elasticsearch:7.17.9
+    env_file:
+      - .env
     environment:
       - discovery.type=single-node
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
@@ -38,6 +44,8 @@ services:
 
   kibana:
     image: docker.elastic.co/kibana/kibana:7.17.9
+    env_file:
+      - .env
     environment:
       - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
       - ELASTICSEARCH_USERNAME=${ELASTICSEARCH_USERNAME}
@@ -52,6 +60,8 @@ services:
     platform: linux/amd64
     ports:
       - "8000:8000"
+    env_file:
+      - .env
     volumes:
       - ./data:/app/data
     depends_on:
