--- a/server/Dockerfile.data
+++ b/server/Dockerfile.data
@@ -20,4 +20,4 @@ COPY . .
 ENV PYTHONPATH="${PYTHONPATH}:/app"
 
 # 데이터 적재 스크립트 실행 명령어
-CMD ["python", "init/load_food_es.py"]
+CMD ["python", "init/load_food.py"]
