--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -25,7 +25,7 @@ frozenlist==1.5.0
 git-filter-repo==2.38.0
 google-auth==2.36.0
 googleapis-common-protos==1.66.0
-grpcio==1.68.0
+# grpcio==1.68.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -70,7 +70,7 @@ platformdirs==4.2.0
 pluggy==1.5.0
 propcache==0.2.0
 proto-plus==1.25.0
-protobuf==4.25.5
+# protobuf==4.25.5
 protoc-gen-openapiv2==0.0.1
 pyasn1==0.6.0
 pyasn1_modules==0.4.1
@@ -119,3 +119,8 @@ uvloop==0.19.0
 watchfiles==0.21.0
 websockets==12.0
 yarl==1.18.0
+google-api-core==2.23.0
+google-cloud-vision==3.8.1
+grpcio==1.68.1
+grpcio-status==1.68.1
+protobuf==5.29.1
