--- a/.github/workflows/workflow-dev.yml
+++ b/.github/workflows/workflow-dev.yml
@@ -1,5 +1,5 @@
 name: EATceed
-run-name: 'PR #${{ github.event.pull_request.number }}: ${{ github.event.pull_request.title }} is deploying to EATceed-Dev'
+run-name: '${{ github.event.pull_request.title }}'
 
 # Event: develop branch merge
 on:
@@ -22,16 +22,16 @@ jobs:
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DEV_DOCKER_USERNAME }}
+          password: ${{ secrets.DEV_DOCKER_PASSWORD }}
 
       # Docker build
       - name: Build Docker Image
-        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }} -f server/Dockerfile.dev server
+        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DEV_DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }} -f server/Dockerfile.dev server
 
       # Docker push
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
+        run: docker push ${{ secrets.DEV_DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
     
   deploy:
     name: Deploy on AWS EC2 Server(Dev)
@@ -54,6 +54,6 @@ jobs:
             cd ai
             sudo docker stop fastapi
             sudo docker rm fastapi
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
-            sudo docker run -d -p 8000:8000 --name fastapi --env-file .env -v ${{ secrets.GOOGLE_API_PATH }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
+            sudo docker pull ${{ secrets.DEV_DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
+            sudo docker run -d -p 8000:8000 --name fastapi --env-file .env -v ${{ secrets.DEV_GOOGLE_API_PATH }} ${{ secrets.DEV_DOCKER_USERNAME }}/${{ secrets.DEV_APPLICATION }}
             sudo docker image prune -a -f
