--- a/.github/workflows/workflow-prod.yml
+++ b/.github/workflows/workflow-prod.yml
@@ -22,16 +22,16 @@ jobs:
       - name: Docker Hub Login
         uses: docker/login-action@v2
         with:
-          username: ${{ secrets.PROD_DOCKER_USERNAME }}
-          password: ${{ secrets.PROD_DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       
       # Docker build
       - name: Build Docker Image
-        run: docker buildx build --platform linux/amd64 -t ${{ secrets.PROD_DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }} -f server/Dockerfile server
+        run: docker buildx build --platform linux/amd64 -t ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }} -f server/Dockerfile server
 
       # Docker push
       - name: Push Docker Image
-        run: docker push ${{ secrets.PROD_DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
     
   deploy:
     name: Deploy on AWS EC2 Server(Prod)
@@ -54,6 +54,6 @@ jobs:
             cd ai
             sudo docker stop fastapi
             sudo docker rm fastapi
-            sudo docker pull ${{ secrets.PROD_DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
-            sudo docker run -d -p 8000:8000 --name fastapi --env-file .env -v ${{ secrets.PROD_GOOGLE_API_PATH }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
+            sudo docker run -d -p 8000:8000 --name fastapi --env-file .env -v ${{ secrets.GOOGLE_API_PATH }} ${{ secrets.DOCKER_USERNAME }}/${{ secrets.PROD_APPLICATION }}
             sudo docker image prune -a -f
