--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -43,9 +43,11 @@ jupyter_core==5.7.2
 jupytext==1.16.1
 langchain==0.3.9
 langchain-community==0.3.8
-langchain-core==0.3.21
+# langchain-core==0.3.21
+langchain-core==0.3.34
 langchain-experimental==0.3.3
 langchain-openai==0.2.10
+langchain-anthropic==0.3.7
 langchain-pinecone==0.2.0
 langchain-text-splitters==0.3.2
 langsmith==0.1.147
@@ -126,3 +128,4 @@ grpcio-status==1.68.1
 protobuf==5.29.1
 pycryptodome==3.21.0
 aiofiles==24.1.0
+anthropic==0.45.2
