feat: 데이터 파이프라인 디렉토리명 변경 및 최종 구현

--- a/.gitignore
+++ b/.gitignore
@@ -210,4 +210,11 @@ server/test/test_image
 server/data/food.csv
 
 # google api
-lambda/service_account.json
+service_account.json
+
+# etl zip file
+lambda_function.zip
+python.zip
+
+# etl library
+dependency_check.txt
